--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <link rel="stylesheet" href="css/style.css">
+  <title>Курс JavaSE + Web.</title>
 </head>
 <body>
-$END$
+<header>Приложение вебинара <a href="http://javawebinar.ru/basejava/" target="_blank">Практика Java. Разработка Web
+  приложения."</a></header>
+<h1>Курс JavaSE + Web</h1>
+<footer>Приложение вебинара <a href="http://javawebinar.ru/basejava/" target="_blank">Практика Java. Разработка Web
+  приложения."</a></footer>
 </body>
 </html>
